[package]
name = "qk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.12.0", optional = true }
slotmap = { version = "1.0.6", optional = true }
sledgehammer_bindgen = { path = "D:/Users/Desktop/github/sledgehammer-bindgen" }
sledgehammer_utils = "0.1.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.59", features = ["Node", "console"] }
qk_macro = { path = "qk_macro" }

[profile.release]
opt-level = 3
strip = "debuginfo"
codegen-units = 1
lto = true
debug = false

[workspace]
qk_macro = { path = "qk_macro" }

[features]
default = []
ssr = ["slotmap"]
bump = ["bumpalo"]
