[package]
name = "qk"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.12.0", optional = true }
slotmap = { version = "1.0.6", optional = true }
sledgehammer_bindgen = "*"
sledgehammer_utils = "0.1.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.59", features = ["Node", "Event", "console", "AnimationEvent", "BeforeUnloadEvent", "CompositionEvent", "DeviceMotionEvent", "DeviceOrientationEvent", "DragEvent", "ErrorEvent", "FocusEvent", "GamepadEvent", "HashChangeEvent", "InputEvent", "KeyboardEvent", "MessageEvent", "MouseEvent", "PageTransitionEvent", "PointerEvent", "PopStateEvent", "PromiseRejectionEvent", "SecurityPolicyViolationEvent", "StorageEvent", "SubmitEvent", "TouchEvent", "TransitionEvent", "UiEvent", "WheelEvent", "ProgressEvent", "Element"] }
qk_macro = { path = "qk_macro" }
js-sys = "0.3.61"
num-traits = "0.2.15"
once_cell = "1.17.1"

[profile.release]
opt-level = 3
strip = "debuginfo"
codegen-units = 1
lto = true
debug = false

[workspace]
qk_macro = { path = "qk_macro" }

[features]
default = []
ssr = ["slotmap"]
bump = ["bumpalo"]
