[package]
name = "qk_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
proc-macro2 = "1.0.53"
quote = "1.0.26"
slotmap = "1.0.6"
syn = "1.0.9"
syn-rsx = "0.9.0"

[lib]
proc-macro = true
